test/demacia/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demacia-api
  namespace: demacia
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT,GET,POST,OPTIONS,DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type,Origin,Accept,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 2048M
    nginx.ingress.kubernetes.io/client-body-buffer-size: 2048M
spec:
  rules:
    - host: demacia.dinghaotech.com
      http:
        paths:
          - path: /api/organization/
            backend:
              serviceName: demacia-organization-api
              servicePort: 2000
          - path: /api/user/
            backend:
              serviceName: demacia-user-api
              servicePort: 2000
          - path: /api/auth/
            backend:
              serviceName: demacia-auth-api
              servicePort: 2000
          - path: /api/class/
            backend:
              serviceName: demacia-class-api
              servicePort: 2000
          - path: /api/student/
            backend:
              serviceName: demacia-student-api
              servicePort: 2000
          - path: /api/websocket/
            backend:
              serviceName: demacia-websocket-api
              servicePort: 2000
          - path: /api/common/
            backend:
              serviceName: demacia-common-api
              servicePort: 2000
          - path: /api/ticket/
            backend:
              serviceName: demacia-ticket-api
              servicePort: 2000
          - path: /api/device/
            backend:
              serviceName: demacia-device-api
              servicePort: 2000
          - path: /api/member/
            backend:
              serviceName: demacia-member-api
              servicePort: 2000
          - path: /api/department/
            backend:
              serviceName: demacia-department-api
              servicePort: 2000
          - path: /api/parent/
            backend:
              serviceName: demacia-parent-api
              servicePort: 2000
          - path: /api/position/
            backend:
              serviceName: demacia-position-api
              servicePort: 2000
          - path: /api/subject/
            backend:
              serviceName: demacia-subject-api
              servicePort: 2000
          - path: /api/coursetable/
            backend:
              serviceName: demacia-coursetable-api
              servicePort: 2000
          - path: /api/personaldisk/
            backend:
              serviceName: demacia-personaldisk-api
              servicePort: 2000
          - path: /api/courserecord/
            backend:
              serviceName: demacia-courserecord-api
              servicePort: 2000
          - path: /api/devicecontrol/
            backend:
              serviceName: demacia-devicecontrol-api
              servicePort: 2000
          - path: /api/socket/
            backend:
              serviceName: demacia-socket-api
              servicePort: 2000
          - path: /api/photos/
            backend:
              serviceName: demacia-photowall-api
              servicePort: 2000
          - path: /api/photofolder/
            backend:
              serviceName: demacia-photowall-api
              servicePort: 2000
          - path: /api/boradphotos/
            backend:
              serviceName: demacia-photowall-api
              servicePort: 2000
          - path: /api/timeswitch/
            backend:
              serviceName: demacia-timeswitch-api
              servicePort: 2000
          - path: /api/event/
            backend:
              serviceName: demacia-event-api
              servicePort: 2000
          - path: /api/urgentevent/
            backend:
              serviceName: demacia-urgentevent-api
              servicePort: 2000
